force-app/main/default/objects/FeatureSwitch__c/FeatureSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Se encarga de la opcion que tiene el Administrador de activar o desactivar acciones que se ejecutan a nivel codigo. Esta orientado a Triggers pero por su simpleza puede ser utilizado para ocurrencias similares.</description>
    <label>Feature Switch</label>
</CustomObject>