force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Cuota_Duplicated_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cuota_Duplicated_Cuotas__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dan360 Cuota Duplicated Cuotas</label>
    <type>Checkbox</type>
</CustomField>