force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Inactive_Products_Validation__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Inactive_Products_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa o desactiva el proceso para validación y eliminación de productos inactivos de órdenes.</description>
    <label>Dan360 Inactive Products Validation</label>
    <type>Checkbox</type>
</CustomField>