force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_InactiveProductTemplateValidation__c.field-meta.xml
<CustomField>
    <fullName>Dan360_InactiveProductTemplateValidation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa o desactiva el proceso para validación y eliminación de productos de plantilla inactivos en órdenes no confirmadas.</description>
    <label>Dan360 InactiveProductTemplateValidation</label>
    <type>Checkbox</type>
</CustomField>