force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Items_Prices_Update_Validation__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Items_Prices_Update_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa o desactiva el proceso para validación de precios y actualización en productos de órdenes.</description>
    <label>Dan360 Items Prices Update Validation</label>
    <type>Checkbox</type>
</CustomField>