force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Order_Items_Prices_Validation__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Order_Items_Prices_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa o desactiva el proceso para validación de precios y eliminación de productos inactivos en órdenes no confirmadas.</description>
    <label>Dan360 Order Items Prices Validation</label>
    <type>Checkbox</type>
</CustomField>