force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Order_Purchase_Order_Validation__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Order_Purchase_Order_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa o desactiva el proceso para validación órdenes de compra confirmadas el día actual para el cliente en turno.</description>
    <label>Dan360 Order Purchase Order Validation</label>
    <type>Checkbox</type>
</CustomField>