force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Order_Quota_Limit_Validation__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Order_Quota_Limit_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa o desactiva el proceso para validación de límites de cuotas cuándo una orden se confirma.</description>
    <label>Dan360 Order Quota Limit Validation</label>
    <type>Checkbox</type>
</CustomField>