force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Order_Send_To_Sap__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Order_Send_To_Sap__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dan360 Order Send To Sap</label>
    <type>Checkbox</type>
</CustomField>