force-app/main/default/objects/FeatureSwitch__c/fields/Dan360_Traffic_Light_Validation__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Traffic_Light_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa o desactiva el proceso de semaforización de órdenes.</description>
    <label>Dan360 Traffic Light Validation</label>
    <type>Checkbox</type>
</CustomField>